Added camera/targeting from Feb 29

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,5 +23,8 @@ pluginManagement {
             name 'frcHome'
             url frcHomeMaven
         }
+        // for the pixy2 camera
+        // maven { url 'https://nexus.otake.pw/repository/maven-public/' }
     }
+
 }
